# rpi_smi_baremetal

./: CMakeLists.txt  armc-cstubs.c  firmware.c  mm  toolchain-arm-none-eabi-rpi2.cmake  upload.sh
peripheral/: rpi-aux.c  rpi-aux.h  rpi-gpio.c  rpi-gpio.h  rpi-smi.c  rpi-smi.h  rpi-systimer.c
